switching to object

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<embed src="https://github.com/Thekegman/Thekegman.github.io/blob/master/docs/Thesis.pdf" width="500" height="375" 
- type="application/pdf">
+
+ <object data="https://github.com/Thekegman/Thekegman.github.io/blob/master/docs/Thesis.pdf" type="application/pdf" width="300" height="200">
+  alt : <a href="https://github.com/Thekegman/Thekegman.github.io/blob/master/docs/Thesis.pdf">Thesis.pdf</a>
+</object>
