--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-
- <object data="https://github.com/Thekegman/Thekegman.github.io/blob/master/docs/Thesis.pdf" type="application/pdf" width="300" height="200">
-  alt : <a href="https://github.com/Thekegman/Thekegman.github.io/blob/master/docs/Thesis.pdf">Thesis.pdf</a>
-</object>
+<html>
+<head>
+<style>
+html, body {
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+}
+</style>
+</head>
+<body>
+<iframe src="docs/Thesis.pdf" width="100%" height="100%" frameborder=0 vspace=0 hspace=0 marginwidth=0 margin
+height=0 >
+This browser does not support PDFs. Please download the PDF to view it: Download PDF
+</iframe>
+</body>
