--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ html, body {
 </style>
 </head>
 <body>
-<iframe src="https://github.com/Thekegman/Thekegman.github.io/raw/master/docs/Thesis.pdf" width="100%" height="100%" frameborder=0 vspace=0 hspace=0 marginwidth=0 margin
+<iframe src="Thesis.pdf" width="100%" height="100%" frameborder=0 vspace=0 hspace=0 marginwidth=0 margin
 height=0 >
 This browser does not support PDFs. Please download the PDF to view it: Download PDF
 </iframe>
