--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="robots" content="noodp" />
-
+    <meta name="theme-color" content="#23b0ff33" />
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="colour_scheme.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css">
