--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li id="cv-link"><a onclick="loadCV()">cv</a></li>
                 <li id="ch1-link"><a onclick="loadCH1()">chapter1</a></li>
                 <li id="ch2-link"><a onclick="loadCH2()">chapter2</a></li>
-                <li id="ch2-link"><a onclick="flip()">flip</a></li>
+                <li id="fliper"><a onclick="flip()">flip</a></li>
                 <li><a href="https://github.com/Thekegman" target="_blank" rel="noopener noreferrer">github</a></li>
             </ul>
         </nav>
