--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">-->
+    <link rel="prefetch" href="cv.html" as="document">
+    <link rel="prefetch" href="chapter1.html" as="document">
+    <link rel="prefetch" href="chapter2.html" as="document">
+    <link rel="prefetch" href="splines.html" as="document">
+    <link rel="prefetch" href="splines.js" as="script">
+
     <link rel="stylesheet" href="colour_scheme.css">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -19,9 +25,10 @@
     <header class="header">
         <nav>
             <ul id="header-list" class="menu">
-                <li id="cv-link"><a href="#cv">cv</a></li>
-                <li id="ch1-link"><a href="#ch1">chapter1</a></li>
-                <li id="ch2-link"><a href="#ch2">chapter2</a></li>
+                <li id="cv-link"><a href="#cv">CV</a></li>
+                <li id="ch1-link"><a href="#ch1">Chapter1</a></li>
+                <li id="ch2-link"><a href="#ch2">Chapter2</a></li>
+                <li id="splines-link"><a href="#splines">Splines</a></li>
                 <li id="fliper"><a onclick="flip()">flip</a></li>
                 <li><a href="https://github.com/Thekegman" target="_blank" rel="noopener noreferrer">github</a></li>
             </ul>
