--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">-->
+    <link rel="stylesheet" href="colour_scheme.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="manifest" href="manifest.json">
+    <script src="splines.js" defer></script>
+    <script src="blogscript.js" defer></script>
+    <meta name="theme-color" content="#1e1e1e">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="prefetch" href="cv.html" as="document">
     <link rel="prefetch" href="chapter1.html" as="document">
     <link rel="prefetch" href="chapter2.html" as="document">
     <link rel="prefetch" href="splines.html" as="document">
-    <link rel="prefetch" href="splines.js" as="script">
-
-    <link rel="stylesheet" href="colour_scheme.css">
-    <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#1e1e1e">
-    <script src="blogscript.js" defer></script>
 </head>
 
 <body>
