--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 <li id="splines-link"><a href="#splines">Splines</a></li>
                 <li id="fliper"><a onclick="flip()">flip</a></li>
                 <li><a href="https://github.com/Thekegman" target="_blank" rel="noopener noreferrer">github</a></li>
+                <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="kevinkeegan" data-color="#2577a7" data-emoji="" data-font="Poppins" data-text="Buy me a coffee" data-outline-color="#ffffff"
+                    data-font-color="#ffffff" data-coffee-color="#FFDD00"></script>
             </ul>
+
         </nav>
     </header>
     <hr>
