add conway remove other stuff

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <link rel="stylesheet" href="colour_scheme.css">
     <link rel="stylesheet" href="main.css">
     <link rel="manifest" href="manifest.json">
-    <script src="splines.js" defer></script>
+    <script src="conway.js" defer></script>
     <script src="blogscript.js" defer></script>
     <meta name="theme-color" content="#1e1e1e">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="prefetch" href="cv.html" as="document">
-    <link rel="prefetch" href="chapter1.html" as="document">
-    <link rel="prefetch" href="chapter2.html" as="document">
-    <link rel="prefetch" href="splines.html" as="document">
+    <link rel="prefetch" href="conway.html" as="document">
+
 </head>
 
 <body>
@@ -25,9 +24,7 @@
         <nav>
             <ul id="header-list" class="menu">
                 <li id="cv-link"><a href="#cv">CV</a></li>
-                <li id="ch1-link"><a href="#ch1">chapter 1</a></li>
-                <li id="ch2-link"><a href="#ch2">chapter 2</a></li>
-                <li id="splines-link"><a href="#splines">Splines</a></li>
+                <li id="conway-link"><a href="#conway">conway</a></li>
                 <li id="fliper"><a onclick="flip()">flip</a></li>
                 <li><a href="https://github.com/Thekegman" target="_blank" rel="noopener noreferrer">github</a></li>
             </ul>
@@ -44,7 +41,6 @@
             </div>
             <div class="post front" id="content"></div>
         </div>
-    </div>
     </div>
     <footer class="footer">
         <span>© Kevin Keegan</span>
