improvements to conway

--- a/conway.html
+++ b/conway.html
@@ -4,4 +4,9 @@
     <canvas id="conway">
         Your browser does not support the HTML canvas tag.
     </canvas>
+    <div style="display:flexbox;margin-top: 10px;">
+        <span class="button" id="conway-random">Random</span>
+        <span class="button" id="conway-addglider">Glider</span>
+        <span class="button" id="conway-clear">Clear</span>
+    </div>
 </div>
