--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="card" id="maincard">
         <div class="card-inner">
             <div class="back video">
-                <iframe class="youtube" src="https://www.youtube.com/embed/DLzxrzFCyOs?autoplay=1"></iframe>
+                <iframe class="youtube" src="https://www.youtube.com/embed/DLzxrzFCyOs"></iframe>
             </div>
             <div class="post front" id="content"></div>
         </div>
