--- a/conway.html
+++ b/conway.html
@@ -4,9 +4,10 @@
     <canvas id="conway">
         Your browser does not support the HTML canvas tag.
     </canvas>
-    <div style="display:flexbox;margin-top: 10px;">
+    <div style="display:flexbox">
         <span class="button" id="conway-random">Random</span>
         <span class="button" id="conway-addglider">Glider</span>
         <span class="button" id="conway-clear">Clear</span>
+        <input type="range" min="1" max="20" value="11" class="slider" id="conway-slider">
     </div>
 </div>
