remove userselect of button div conway

--- a/conway.html
+++ b/conway.html
@@ -4,7 +4,7 @@
     <canvas id="conway">
         Your browser does not support the HTML canvas tag.
     </canvas>
-    <div style="display:flexbox">
+    <div style="display:flexbox; user-select: none;">
         <span class="button" id="conway-random">Random</span>
         <span class="button" id="conway-addglider">Glider</span>
         <span class="button" id="conway-clear">Clear</span>
