--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="prefetch" href="cv.html" as="document">
     <link rel="prefetch" href="conway.html" as="document">
+    <link rel="prefetch" href="hitsthespot.webp" as="image">
 
 </head>
 
